trunk/Archive2/16/6382643bb86efa/output
main.cpp: In instantiation of '<lambda(auto:1, int)> [with auto:1 = P<<lambda(auto:1, int)> >]':
main.cpp:15:26:   required from 'auto P<F>::operator()(X) [with X = int; F = <lambda(auto:1, int)>]'
main.cpp:27:45:   required from here
main.cpp:6:38: error: use of 'auto P<F>::operator()(X) [with X = int; F = <lambda(auto:1, int)>]' before deduction of 'auto'
   return myself(x - 1) + myself(x - 2);
                                      ^
main.cpp:6:38: error: invalid use of 'auto'
main.cpp:6:22: error: invalid use of 'auto'
   return myself(x - 1) + myself(x - 2);
                      ^
main.cpp: In lambda function:
main.cpp:7:1: warning: control reaches end of non-void function [-Wreturn-type]
 };
 ^
0 -> 1
1 -> 1
2 -> 2
3 -> 3
4 -> 5
5 -> 8
6 -> 13
7 -> 21
8 -> 34
9 -> 55
